# cvr_osc_lib_py

./: .gitignore  .markdown.json  .pre-commit-config.yaml  README.md  pyproject.toml
cvr_osc_lib/: __init__.py  osc_interface.py  osc_messages_data.py
examples/: README.md  example_chat_box_messenger.py  example_midi_prop.conf  example_midi_prop.py  example_midi_prop_Generate_Midi_Animator_v1.0.0.unitypackage  example_midi_prop_Generate_Midi_Animator_v1.0.1.unitypackage  example_run_all.py  example_tracked_props.py  example_tracked_props_externalconfig.py  example_windows_global_media.py  example_windows_global_media_chat_box.py  example_xbox_controller_rc_prop.conf  example_xbox_controller_rc_prop.py  trackers.conf
