[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cvr-osc-lib"
version = "0.1.1"
authors = [
  { name="kafeijao", email="kafeijao@gmail.com" },
  { name="novavoidhowl", email="me@novavoidhowl.com" },
]
description = "A small library to interface with CVR Melon Loader OSC mod API"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]
dependencies = [
  'python-osc >= 1.8.0, < 2',
]
[project.optional-dependencies]
dev = [
    'pre-commit',
]

[project.urls]
"Homepage" = "https://github.com/kafeijao/cvr_osc_lib_py"
"Bug Tracker" = "https://github.com/kafeijao/cvr_osc_lib_py/issues"
